# strace-parser

./: .gitignore  pyproject.toml
strace_parser/: json_transformer.py
strace_parser/data/: grammar.txt
