[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strace-parser"
version = "0.1.0"
description = "Parser for strace output"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Chris Hunt", email = "chrahunt@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "lark-parser>=0.7.8",
]

[project.scripts]
strace-parser = "strace_parser.cli:main"
